Feat: Criação de jogo e mão
